1/15/14 factor out all core computations into PHModel, reducing complexity of Solution
1/15/14 Solution: factor out pH calculations into static functions
1/15/14 GraphIndicator: pickable=false for nodes that don't need to be involved in interactivity
1/15/14 add invisible rectangle on top of graph indicator handle, so that space between handle and body isn't a dead zone
1/15/14 tweak shadow on graph indicators so that they appear to float
1/15/14 remove 'Node' suffix from GraphIndicator and subtypes
1/15/14 new screen icons from YY
1/15/14 constrain pH to valid range when dragging the graph indicators
1/15/14 make graph indicators look disabled (using opacity) when value is zero
1/15/14 GraphIndicatorNode: replace multiple options with isInteractive
1/14/14 Custom: first attempt at making graph indicators interactive, has some range problems
1/14/14 throw an Error when attempting to construct a Solute with a pH value that is out of range
1/14/14 use linkAttribute to wire up view properties that control visibility
1/14/14 use 'children' option to add nodes to each ScreenView's rootNode
1/14/14 rename Solution.drain to drainSolution for clarify as call sites
1/14/14 make RatioNode responsible for its own positioning
1/14/14 expand touchArea for picker in 'Custom' pH meter
1/14/14 fix: show 'Solutions' pH meter pointer only if meter is expanded
1/14/14 add option.emptyWhenSoluteChanges to Solution, needed for 'Custom' screen where a new custom solute is created as the pH changes
1/14/14 MAJOR CHANGE: make Solute immutable, change pH of 'custom' solution by creating new Solute instances when the pH changes
1/14/14 bug fix in BasicsPHMeterNode, 'enabled' fill was null
1/14/14 factor out PHScaleColors.PANEL_FILL, color for all panels and expand/collapse bars
1/13/14 integrate NumberPicker into CustomPHMeterNode
1/13/14 ditch ExpandCollapseBar in CustomMeterNode, implement something specific to what's needed